--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ about: true
 ---
 
 <div >
-    <p class="aboutThing"  >I am a Software Engineer in Oslo. I make <a href="https://github.com/K-Rafiki">Open Source projects</a> and love exploring tech.
+    <p class="aboutThing"  >I am a Software Engineer in Oslo. I make <a href="https://github.com/EyrisCrafts">Open Source projects</a> and love exploring tech.
         Stardew fisher and Dota2 feeder. I like to read Social Science and Economy in my spare time.</p>
 
 </div>
